fix: button sizing and spacing

--- a/frontend/src/components/Card/card.scss
+++ b/frontend/src/components/Card/card.scss
@@ -4,7 +4,7 @@
 	width: rem(256);
 	.card {
 		&-img-top {
-			height: 303px;
+			height: rem(303);
 			background-color: $clr-neutral-6;
 			border-radius: $br-textile;
 		}
@@ -13,6 +13,7 @@
 			display: flex;
 			flex-direction: column;
 			padding-left: 0px;
+			padding-right: 0px;
 		}
 
 		&-title {
