--- a/frontend/src/components/Hero/hero.scss
+++ b/frontend/src/components/Hero/hero.scss
@@ -33,6 +33,7 @@ header {
 	.venue,
 	.location {
 		@extend %icon-text-box;
+		gap: $gap-sm;
 	}
 	.time {
 		&::before {
