--- a/frontend/src/components/Navigation/navigation.scss
+++ b/frontend/src/components/Navigation/navigation.scss
@@ -2,7 +2,6 @@
 
 .navigation {
 	.navbar {
-		padding: rem(26) 0px;
 		border-bottom: 1px solid $clr-neutral-6;
 
 		@include breakpoint(min-width, medium) {
