--- a/frontend/src/scss/layout/_spacing.scss
+++ b/frontend/src/scss/layout/_spacing.scss
@@ -3,6 +3,8 @@
 $banner-padding: rem(58);
 $spacer: rem(74);
 $banner-spacer: rem(26);
+$gap: rem(14);
+$gap-sm: rem(4);
 
 .spacer {
 	margin-top: $spacer;
