--- a/frontend/src/scss/theme/_typography.scss
+++ b/frontend/src/scss/theme/_typography.scss
@@ -10,3 +10,4 @@ $headings-font-weight: $fw-semi-bold;
 $headings-margin-bottom: rem(43);
 $line-height-base: 1.4;
 $display-line-height: 1;
+$nav-link-font-size: $small;
